--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
-.bg-grad{
-    background-color: rgba(240, 248, 255, 0.329);
+/* .bg-grad{
+    background-color: rgba(240, 248, 255, 0.507);
+} */
+
+.reg-bg{
+    /* display: flex;
+    height: 100vh; */
+    background-image: url('./assets/register-bg.jpg');
+    background-size: cover;
+    box-shadow: inset 0 0 0 2000px rgba(0,0,0,0.6);
 }
