--- a/src/App.css
+++ b/src/App.css
@@ -28,11 +28,29 @@
     color: #fff;
     text-align: center;
     color: #fff; /* Set the text color */
-  text-shadow: 0 0 2px rgba(255, 255, 255, 0.8), /* Adjust the shadow color and size */
-               0 0 5px rgba(255, 255, 255, 0.8),
-               0 0 10px rgba(255, 255, 255, 0.8);
+  text-shadow: 0 0 1px rgba(255, 255, 255, 0.8), /* Adjust the shadow color and size */
+               0 0 3px rgba(255, 255, 255, 0.8),
+               0 0 5px rgba(255, 255, 255, 0.8);
+  }
+
+  .home-font {
+    font-family: "Dancing Script", cursive;
+    font-optical-sizing: auto;
+    font-size: 80px;
+    font-weight: bolder;
+    font-style: normal;
   }
   
+  .Button{
+    padding: 10px 18px;
+    border:  1.3px solid black;
+    
+    border-radius: 15px;
+  }
+  .Button:hover{
+      background-color: rgba(0, 0, 0, 0.349);
+      transition: .5s;
+  }
   /* @keyframes glow {
     from {
       text-shadow: 0 0 2px #fff, 0 0 3px #fff, 0 0 4px #19029e, 0 0 5px #0073e6, 0 0 6px #09306e, 0 0 7px #180669, 0 0 10px #0e1492;
@@ -42,4 +60,18 @@
     }
   } */
 
-  
+  @media screen and (max-width: 768px) {
+    .home-font {
+      font-family: "Dancing Script", cursive;
+      font-optical-sizing: auto;
+      font-size: 40px;
+      font-weight: bolder;
+      font-style: normal;
+    }
+    .Button{
+      padding: 7px 13px;
+      border:  1.3px solid black;
+      
+      border-radius: 15px;
+    }
+  }
