--- a/src/App.css
+++ b/src/App.css
@@ -31,6 +31,13 @@
   /* background-repeat: repeat; */
   box-shadow: inset 0 0 0 2000px rgba(0,0,0,0.7);
 }
+.circle_bg{
+  background-image: url('./assets/orange_circle.png');
+  width: 200px;
+  height: 250px;
+  /* background-repeat: repeat; */
+   /* box-shadow: inset 0 0 0 2000px rgba(0,0,0,0.5);  */
+}
 
 .glow {
     
@@ -94,6 +101,11 @@
     overflow: hidden;
     
   }
+  .tab {
+    display: inline-block;
+    margin-left: 4em;
+}
+
   
   .content {
     opacity: 0;
@@ -128,6 +140,15 @@
     opacity: 1;
     transform: translateY(200px);
     -webkit-transform: translateY(200px);
+  }
+
+  .circle {
+    background-image: radial-gradient(rgb(221, 191, 84),rgb(155, 35, 101) ,rgb(212, 161, 66) );
+        border-radius: 50%;
+    height: 15em;
+    width: 15em;
+    /* transform: translate(200px,150px); */
+    /* background-position-x: center; */
   }
 
   @media screen and (max-width: 768px) {
