--- a/src/App.css
+++ b/src/App.css
@@ -38,10 +38,11 @@
   box-shadow: inset 0 0 0 2000px rgba(0,0,0,0.7);
 }
 .launch_bg{
-  background-image: url('./assets/Services_pictures/launch.jpg');
+  background-image: url('./assets/Services_pictures/launch-4.jpg');
   background-size: cover;
   /* background-repeat: repeat; */
-  box-shadow: inset 0 0 0 2000px rgba(0,0,0,0.7);
+  /* transform: translateY(200px); */
+  /* box-shadow: inset 0 0 0 2000px rgba(0,0,0,0.2); */
 }
 .circle_bg{
   background-image: url('./assets/orange_circle.png');
