--- a/src/App.css
+++ b/src/App.css
@@ -21,7 +21,7 @@
   background-image: url('./assets/home_bg.jpg');
   background-size: cover;
   /* background-repeat: repeat; */
-  box-shadow: inset 0 0 0 2000px rgba(0,0,0,0.7);
+  box-shadow: inset 0 0 0 2000px rgba(0,0,0,0.85);
   /* overflow-x: hidden !important; */
 }
 
@@ -61,6 +61,21 @@
                0 0 3px rgba(255, 255, 255, 0.8),
                0 0 5px rgba(255, 255, 255, 0.8);
   }
+  .grad_text{
+    background: -webkit-linear-gradient(rgb(39, 12, 241), rgb(212, 4, 115));
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;   }
+  .play-regular {
+    font-family: "Play", sans-serif;
+    font-weight: 500;
+    font-style: normal;
+  }
+  
+  .play-bold {
+    font-family: "Play", sans-serif;
+    font-weight: 800;
+    font-style: normal;
+  }
 
   .home-font {
     font-family: "Dancing Script", cursive;
@@ -71,13 +86,20 @@
   }
 
   .Button{
-    padding: 10px 18px;
-    border:  1.3px solid black;
+    /* max-width: 250px; */
+    padding: 1rem;
+    /* color: white; */
+    border-width: 1px;
+    border-style: solid;
+    border-image: 
+      linear-gradient(
+        rgb(39, 12, 241), rgb(212, 4, 115)
+      ) 1 ;
     
     border-radius: 15px;
   }
   .Button:hover{
-      background-color: rgba(0, 0, 0, 0.349);
+      background-color: rgba(44, 43, 43, 0.349);
       transition: .5s;
   }
 
