--- a/src/App.css
+++ b/src/App.css
@@ -229,6 +229,13 @@
       /* background-repeat: repeat; */
       box-shadow: inset 0 0 0 2000px rgba(0,0,0,0.7);
     }
+    .launch_bg{
+      background-image: url('./assets/Services_pictures/launch-4.jpg');
+      background-size: 1200px;
+      /* background-repeat: repeat; */
+      /* transform: translateY(200px); */
+      /* box-shadow: inset 0 0 0 2000px rgba(0,0,0,0.2); */
+    }
     .Buy-button{
     padding: 5px 60px;
     color: white;
