--- a/src/App.css
+++ b/src/App.css
@@ -150,8 +150,14 @@
   }
   .Wave{
     position:absolute;
-    bottom: -750px;
+    bottom: -980px;
+    /* height: 150px; */
+    /* width: auto; */
     /* left: 0; */
+    /* z-index: 50; */
+  }
+  .Z_index{
+    z-index: 1000;
   }
   /* @keyframes glow {
     from {
