--- a/src/App.css
+++ b/src/App.css
@@ -280,8 +280,8 @@
       box-shadow: inset 0 0 0 2000px rgba(0,0,0,0.7);
     }
     .profile_bg{
-      background-image: url('./assets/Services_pictures/Bus.jpg');
-      background-size: cover;
+      background-image: url('./assets/Services_pictures/profile_bg-2.jpg');
+      background-size: 1500px;
       /* transform: translateX(-200px); */
       /* background-repeat: repeat; */
       /* box-shadow: inset 0 0 0 2000px rgba(0,0,0,0.7); */
